<resources>
    <string name="app_name">Рандомайзер</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="more_det">Подробнее</string>
    <string name="name_element">название:</string>
    <string name="comment_element">коммент:</string>
    <string name="elem_text_group">группа:</string>
    <string name="name_input_field">Имя</string>
    <string name="comment_input_field">Комментарий</string>
    <string name="quantity_input_field">Количество</string>
    <string name="quantity_element">количество</string>
    <string name="theme">Тема</string>
    <string name="export">экспорт</string>
    <string name="impotr_">импорт</string>
    <string name="delete_">удалить</string>
    <string name="export_text">Экспорт</string>
    <string name="delete_text">Удалить</string>
    <string name="properties_text">Свойства</string>
    <string name="groups_title">Группы</string>
    <string name="deleting_title">Удаление</string>
    <string name="export_title">Экспорт</string>
    <string name="start_export">Экспорт...</string>
    <string name="xml_copied_to_clipboard">Данные скопированы в буффер обмена</string>
    <string name="Deletring_alert_title">Удаление</string>
    <string name="complete_delete">Точно удалить?!?</string>
</resources>