<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/back_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:paddingStart="20dp"

    android:paddingEnd="20dp"
    android:paddingTop="100dp"
    >
    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/add_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/back_item"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_component_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:textColor="?attr/colorFont"
                android:hint="@string/name_input_field"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_component_comment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:hint="@string/comment_input_field"
                android:textColor="?attr/colorFont"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_component_quantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:hint="@string/quantity_input_field"
                android:textColor="?attr/colorFont"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Добавить"
                android:textColor="?attr/colorFont"
                android:background="@drawable/back_item"/>



        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</FrameLayout>