<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/back_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/more_item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:background="@drawable/back_item"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="60dp">

        <!--кнопка удаления-->
        <LinearLayout
            android:id="@+id/delete_item_but"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/back_more_view_item"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/baseline_delete_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/delete_text"
                android:background="@null"
                android:textSize="@dimen/main_text_size"
                android:layout_weight="1"
                android:gravity="center"
                />

        </LinearLayout>

        <!--кнопка экспорта-->
        <LinearLayout
            android:id="@+id/export_item_but"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/back_more_view_item"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/file_export_icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/export_text"
                android:textSize="@dimen/main_text_size"
                android:layout_weight="1"
                android:gravity="center"
                />

        </LinearLayout>

        <!--кнопка свойств-->
        <LinearLayout
            android:id="@+id/export_roperties_but"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/baseline_feed_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/properties_text"
                android:textSize="@dimen/main_text_size"
                android:layout_weight="1"
                android:gravity="center"
                />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>